Use List.of coming with Java instead of Guava ImmutableList (#795)
GitOrigin-RevId: 79319c6dac180486fdf2c270ab73af31e84381e6